feat: Consolidate Nano Banana tools and enhance environment configuration
- Merged `generate_nano_banana`, `edit_nano_banana`, and `upscale_nano_banana` into a single `nano_banana` tool with auto-detection of modes.
- Introduced `KIE_AI_CALLBACK_URL` environment variable for default callback URL configuration.
- Updated README and documentation to reflect new tool structure and parameters.
- Bumped version to 1.1.2 and updated CHANGELOG.md with new features and improvements.

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ KIE_AI_TIMEOUT=60000
 
 # Optional: SQLite database path (default: ./tasks.db)
 KIE_AI_DB_PATH=./tasks.db
+# Optional: Callback URL for task completion notifications
+# If set, this will be used as default callback URL for all video generation tasks
+KIE_AI_CALLBACK_URL=https://your-domain.com/api/callback
