--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felores/kie-ai-mcp-server",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "MCP server for Kie.ai APIs (Nano Banana image generation/editing and Veo3 video generation)",
   "main": "dist/index.js",
   "bin": {
@@ -33,6 +33,13 @@
   "homepage": "https://github.com/felores/kie-ai-mcp-server#readme",
   "bugs": {
     "url": "https://github.com/felores/kie-ai-mcp-server/issues"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/felores/kie-ai-mcp-server.git"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.4.0",
