--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@felores/kie-ai-mcp-server",
-  "version": "1.2.2",
-  "description": "MCP server for Kie.ai APIs (Nano Banana image generation/editing and Veo3 video generation)",
+  "version": "1.3.0",
+  "description": "MCP server for Kie.ai APIs (Nano Banana image generation/editing, Veo3 video generation, Suno music generation, and ElevenLabs text-to-speech)",
   "main": "dist/index.js",
   "bin": {
     "kie-ai-mcp-server": "dist/index.js"
