--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@felores/kie-ai-mcp-server",
-  "version": "1.7.1",
-  "description": "MCP server for Kie.ai APIs (Nano Banana image generation/editing, Veo3 video generation, Suno music generation, and ElevenLabs text-to-speech)",
+  "version": "1.9.2",
+  "description": "MCP server for Kie.ai APIs (19 AI tools: Nano Banana image generation/editing/upscaling, Veo3 video generation, Suno music generation, ElevenLabs TTS/sound effects, ByteDance Seedance/Seedream video/image, Qwen image generation/editing, Runway Aleph video transformation, Midjourney AI generation, Wan video generation, OpenAI 4o image generation/editing/variants, Flux Kontext image generation/editing, Recraft background removal, Ideogram image reframing)",
   "main": "dist/index.js",
   "bin": {
     "kie-ai-mcp-server": "dist/index.js"
@@ -20,9 +20,24 @@
     "ai",
     "image-generation",
     "video-generation",
+    "music-generation",
+    "text-to-speech",
     "nano-banana",
     "veo3",
-    "model-context-protocol"
+    "suno",
+    "elevenlabs",
+    "bytedance",
+    "qwen",
+    "runway",
+    "midjourney",
+    "wan",
+    "openai-4o-image",
+    "flux-kontext",
+    "recraft",
+    "ideogram",
+    "model-context-protocol",
+    "ai-api",
+    "unified-ai"
   ],
   "author": "felores",
   "license": "MIT",
