--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@felores/kie-ai-mcp-server",
-  "version": "1.9.9",
-  "description": "MCP server for Kie.ai APIs (20 AI tools: Nano Banana image generation/editing/upscaling, Veo3 video generation, Suno music generation, ElevenLabs TTS/sound effects, ByteDance Seedance/Seedream video/image, Qwen image generation/editing, Runway Aleph video transformation, Midjourney AI generation, Wan video generation, Hailuo video generation, Kling video generation, OpenAI 4o image generation/editing/variants, Flux Kontext image generation/editing, Recraft background removal, Ideogram image reframing)",
+  "version": "2.0.0",
+  "description": "MCP server for Kie.ai APIs (21 AI tools: Nano Banana image generation/editing/upscaling, Veo3 video generation, Suno music generation, ElevenLabs TTS/sound effects, ByteDance Seedance/Seedream video/image, Qwen image generation/editing, Runway Aleph video transformation, Midjourney AI generation, Wan video generation, Hailuo video generation, Kling video generation, OpenAI 4o image generation/editing/variants, Flux Kontext image generation/editing, Recraft background removal, Ideogram image reframing, Sora 2 video generation)",
   "main": "dist/index.js",
   "bin": {
     "kie-ai-mcp-server": "dist/index.js"
