--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/node": "^20.10.0",
     "@types/sqlite3": "^3.1.11",
     "jest": "^29.7.0",
+    "ts-jest": "^29.4.6",
     "tsx": "^4.6.0",
     "typescript": "^5.3.0"
   },
